--- a/public/css/main.css
+++ b/public/css/main.css
@@ -1,3 +1,135 @@
 body {
-  font-family: 'Lato', 'helvetica', sans-serif;
+  font-family: "Lato", "helvetica", sans-serif;
+}
+
+input[type="text"], input[type="email"]{
+  display: block;
+  margin-top: 5px;
+  border: none;
+  border-radius: 5px;
+  border-bottom: solid 2px gray;
+  width: 60%;
+  height: 1.75rem;
+}
+
+input:not([type="submit"]):focus {
+  border-top: white;
+  border-right: white;
+  border-left: white;
+  border-bottom: solid 3px #328ef7;
+}
+
+input[type="submit"] {
+  display: block;
+  margin: auto;
+  margin-top: 1rem;
+  width: 60%;
+  height: 2rem;
+  font-size: 20px;
+  border: none;
+  border-radius: 5px;
+  color: white;
+  background-color: #328ef7;
+}
+
+label {
+  font-size: 18px;
+}
+
+.form-container {
+  margin: auto;
+  width: 70%;
+  padding: 1rem;
+}
+
+h3.section-title {
+  border-bottom: black solid 2px;
+}
+
+.form-section {
+  margin: auto;
+  margin-top: 1rem;
+  padding: 1rem;
+  border: solid white 1px;
+  border-radius: 15px;
+  background-color: #dddbdb;
+}
+
+.label-container {
+  width: 100%;
+  padding: 0.5rem;
+}
+
+.radio-option {
+  height: 1.75rem;
+  width: 1.75rem;
+  margin-top: 0.5rem;
+}
+
+.container {
+  display: inline-block;
+  position: relative;
+  padding-left: 32px;
+  margin-bottom: 12px;
+  margin-top: 12px;
+  margin-left: 15px;
+  cursor: pointer;
+  -webkit-user-select: none;
+  -moz-user-select: none;
+  -ms-user-select: none;
+  user-select: none;
+}
+
+/* Hide the browser's default radio button */
+.container input {
+  position: absolute;
+  opacity: 0;
+  cursor: pointer;
+}
+
+/* Create a custom radio button */
+.checkmark {
+  position: absolute;
+  top: 0;
+  left: 0;
+  height: 25px;
+  width: 25px;
+  background-color: #eee;
+  border-radius: 50%;
+}
+
+/* On mouse-over, add a grey background color */
+.container:hover input ~ .checkmark {
+  background-color: #ccc;
+}
+
+/* When the radio button is checked, add a blue background */
+.container input:checked ~ .checkmark {
+  background-color: #2196f3;
+}
+
+/* Create the indicator (the dot/circle - hidden when not checked) */
+.checkmark:after {
+  content: "";
+  position: absolute;
+  display: none;
+}
+
+/* Show the indicator (dot/circle) when checked */
+.container input:checked ~ .checkmark:after {
+  display: block;
+}
+
+/* Style the indicator (dot/circle) */
+.container .checkmark:after {
+  top: 9px;
+  left: 9px;
+  width: 8px;
+  height: 8px;
+  border-radius: 50%;
+  background: white;
+}
+
+.block {
+  display: block;
 }
